test/extern/ferguson/param-cname-bad-int.good
param-cname-bad-int.chpl:5: error: extern name expression must be a string
